<resources>
    <string name="app_name">Pura Vida Móvil</string>
    <string name="app_name_cap">Pura Vida Móvil</string>

    <string name="menu_title">Perfil</string>
    <string name="menu_info">Información de la cuenta</string>
    <string name="menu_info_nid">Cédula</string>
    <string name="menu_info_logout"><u>Cerrar Sesión</u></string>
    <string name="menu_guide">Guía e información</string>
    <string name="menu_guide_notice">Avisos</string>
    <string name="menu_guide_app_version">Versión de la aplicación</string>
    <string name="menu_revoke_service"><u>Desactivación de cuenta</u></string>

    <string name="noti_empty_list">No hay notificación</string>
    <string name="privacy_security"><![CDATA[Políticas de Privacidad]]></string>
    <string name="terms_conditions"><![CDATA[Condiciones de Uso]]></string>
    <string name="cert_detailTitle">Detalles del Certificado</string>
    <string name="my_cert">Mis certificados</string>
    <string name="solicitar">Cert. Disponibles</string>
    <string name="add_cert">Solicitar certificado</string>
    <string name="add_cert_desc">Consulta la lista de certificados disponibles.</string>
    <string name="back_to_notilist">Volver a la lista</string>
    <string name="unsubs_title">Desactivación o eliminación de servicio</string>
    <string name="unsubs_subTitle">¿Desea desactivar su cuenta?</string>
    <string name="unsubs_desc1">Toda la información de uso del servicio y los certificados emitidos serán eliminados y no podrán ser recuperados.</string>
    <string name="unsubs_desc2">Después de desactivar, si desea volver a utilizar el servicio, puede registrarte como nuevo miembro y utilizarlo.</string>
    <string name="unsubs_confirmation">He revisado la información y estoy de acuerdo.</string>
    <string name="cert_issued_title">Certificado emitido correctamente</string>
    <string name="cert_issued_subtitle">El siguiente certificado ha sido emitido en Pura Vida Móvil</string>
    <string name="empty_expression">-</string>
    <string name="gaudi_auth_title">Por favor, seleccione el siguiente código en la aplicación GAUDI.</string>
    <string name="gaudi_auth_desc">Si el tiempo de validez ha expirado, presione el botón [Actualizar] para obtener un nuevo código</string>
    <string name="full_menu">Menú completo</string>

    <string name="str_nid">Cédula</string>
    <string name="str_regi">Registrarse en Pura Vida Móvil</string>
    <string name="str_login">Iniciar sesión</string>
    <string name="str_auth">Autenticación</string>
    <string name="str_delete">Eliminar</string>
    <string name="str_generate">Emitir</string>
    <string name="str_logout">Cerrar sesión</string>
    <string name="str_notification">Avisos</string>
    <string name="str_name">Nombre</string>
    <string name="str_issued_date">Fecha Emisión</string>
    <string name="str_more">Ver Avisos Anteriores</string>
    <string name="str_profile">Perfil</string>
    <string name="str_notice">Avisos</string>
    <string name="str_faq">Preguntas Frecuentes</string>
    <string name="str_licence">Licencia</string>
    <string name="str_cancel">Cancelar</string>
    <string name="str_confirm">Confirmar</string>
    <string name="str_license">Licencias del aplicativo</string>

    <string name="err_no_matches_found">No se encontraron coincidencias. Por favor, verifica de nuevo.</string>
    <string name="err_cert_delete">Se produjo un error durante la eliminación del certificado</string>
    <string name="err_download">Se produjo un error durante la descarga</string>
    <string name="err_export">Se produjo un error durante la transferencia</string>
    <string name="err_no_info_for_nid">No se ha buscado información para el nID que ingresó. Por favor, verifica de nuevo.</string>
    <string name="err_unstable_network">Conexión de red inestable</string>
    <string name="err_check_internet_connection">Por favor, verifica tu conexión a Internet.</string>
    <string name="err_identity_verification_error">Se produjo un error durante la verificación de la identidad</string>
    <string name="err_session_expired_content">Tu sesión ha expirado. Serás redirigido a la pantalla de inicio de sesión.</string>
    <string name="err_login_error">Se produjo un error durante el inicio de sesión</string>

    <string name="err_account_already_registered">Esta cuenta ya está registrada en Pura Vida Móvil.</string>
    <string name="err_unexpected_error">Se produjo un error inesperado</string>
    <string name="err_session_expired">Tu sesión ha expirado"</string>
    <string name="err_login_again">Por favor, inicia sesión de nuevo.</string>
    <string name="err_tryagin_msg">Por favor, intenta de nuevo más tarde.</string>
    <string name="gaudi_auth">Autenticarse</string>
    <string name="gaudi_auth_update">Actualizar</string>

    <string name="str_tv_terms_message">Después de completar la autenticación en la app GAUDI, presiona el botón de autenticación completada.</string>
    <string name="str_accept_terms">Aceptar términos y condiciones</string>
    <string name="str_terms_and_conditions">Ver términos y condiciones</string>
    <string name="str_terms_url">https://www.micitt.go.cr/billetera-digital/politicas-privacidad</string>
    <string name="err_terms_and_conditions">Por favor, acepta los términos y condiciones para continuar.</string>


    <string name="cert_fuel_title">Tarifas Combustible</string>
    <string name="str_fuel">Tarifas Combustible ARESEP</string>

    <string name="cert_exchange_title">Tipo Cambio Dólar según BCCR</string>
    <string name="str_exchange">Tipo Cambio Dólar BCCR</string>

    <string name="cert_vacuna_title">Vacuna Fiebre Amarilla</string>
    <string name="str_button_vacuna_download">Descargar Certificado</string>
    <string name="open_agent">Agente 🤖</string>
    <string name="content_description_agent">Agente</string>
</resources>