<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_container"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="end"
    android:background="@drawable/popup_menu"
    android:layout_marginEnd="8dp"
    android:padding="4dp"
    android:elevation="8dp">

    <LinearLayout
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        android:paddingTop="8dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <TextView
            android:id="@+id/menu_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_menu"
            android:textColor="@color/micitt_theme"
            android:textSize="22sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:background="@color/G40"/>

    </LinearLayout>

    <!-- 메뉴 항목 -->
    <TextView
        android:id="@+id/profile_item"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/str_profile"
        android:textColor="@android:color/black"
        android:padding="14dp" />

    <TextView
        android:id="@+id/notice_item"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/str_notice"
        android:textColor="@android:color/black"
        android:padding="14dp" />

    <TextView
        android:id="@+id/faq_item"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/str_faq"
        android:textColor="@android:color/black"
        android:padding="14dp" />

    <TextView
        android:id="@+id/licence_item"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/str_licence"
        android:textColor="@android:color/black"
        android:padding="14dp" />

    <TextView
        android:id="@+id/fuel_item"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text= "@string/str_fuel"
        android:textColor="@android:color/black"
        android:padding="14dp" />

    <TextView
        android:id="@+id/exchange_item"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text= "@string/str_exchange"
        android:textColor="@android:color/black"
        android:padding="14dp" />
</LinearLayout>
