<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="#77777777">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingTop="32dp"
        android:paddingBottom="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:padding="24dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/dialog_authentication">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_terms_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_tv_terms_message"
                android:paddingBottom="16dp" />

            <CheckBox
                android:id="@+id/checkbox_accept"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:text="@string/str_accept_terms" />

            <TextView
                android:id="@+id/tv_terms_link"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/checkbox_accept"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:text="@string/str_terms_and_conditions"

                android:textAppearance="@style/registrarse" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
