<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/header"
        layout="@layout/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/header"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/vc_complete_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:textAlignment="center"
            android:text="@string/cert_issued_title"
            android:textAppearance="@style/certificado"/>

        <TextView
            android:id="@+id/vc_complete_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginBottom="24dp"

            android:textAppearance="@style/el_siguient"
            android:text="@string/cert_issued_subtitle" />

        <include
            android:id="@+id/vc_issued_sample"
            android:layout_width="match_parent"
            layout="@layout/item_document"
            android:layout_height="wrap_content"
            android:visibility="gone"
            />

        <include
            android:id="@+id/vc_ceci_issued_sample"
            android:layout_width="match_parent"
            layout="@layout/item_ceci_document"
            android:layout_height="wrap_content"
            android:visibility="gone"
            />

        <View
            android:id="@+id/vc_complete_bl"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="24dp"
            android:background="@color/G40"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:textSize="16sp"
                    android:textColor="@color/Font_G60"
                    android:text="@string/str_nid" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:textSize="16sp"
                    android:textColor="@color/Font_G60"
                    android:text="@string/str_name" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:textSize="16sp"
                    android:textColor="@color/Font_G60"
                    android:text="@string/str_issued_date" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:textSize="16sp"
                    android:text="@string/empty_expression" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:textSize="16sp"
                    android:text="@string/empty_expression" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:textSize="16sp"
                    android:text="@string/empty_expression" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/vc_complete_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/vc_complete_nid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:textSize="16sp"
                    android:text="testing"
                    android:textAlignment="textEnd"/>

                <TextView
                    android:id="@+id/vc_complete_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:maxLines="2"
                    android:text="testing"
                    android:layout_marginBottom="16dp"
                    android:textAlignment="textEnd" />

                <TextView
                    android:id="@+id/vc_complete_issued_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="testing"
                    android:layout_marginBottom="16dp"
                    android:textAlignment="textEnd" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <include
        android:id="@+id/vc_complete_btn"
        layout="@layout/layout_btn"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="80dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>