<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/header"
        layout="@layout/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/unsub_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/header">

        <TextView
            android:id="@+id/unsub_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unsubs_title"
            android:textColor="@color/regal_blue"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/unsub_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"

            android:text="@string/unsubs_subTitle"
            android:textColor="@color/Font_G60"
            android:textSize="22sp" />

        <LinearLayout
            android:id="@+id/unsub_content_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/G10"
            android:orientation="vertical"
            android:paddingTop="24dp"
            android:paddingBottom="24dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="12dp"
                android:paddingEnd="12dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/gray_dot" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="12dp"
                    android:lineSpacingExtra="4sp"
                    android:paddingStart="8dp"

                    android:paddingEnd="0dp"
                    android:text="@string/unsubs_desc1"
                    android:textColor="@color/Font_G60" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="12dp"
                android:paddingEnd="12dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/gray_dot" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:lineSpacingExtra="4sp"
                    android:paddingStart="8dp"

                    android:paddingEnd="0dp"
                    android:text="@string/unsubs_desc2"
                    android:textColor="@color/Font_G60" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </LinearLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/unsub_checkbox_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/setting_notice_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <CheckBox
                    android:id="@+id/unsub_checkbox"
                    android:layout_width="16dp"
                    android:layout_height="16dp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/unsub_checkbox_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/unsubs_confirmation"
                android:textColor="@color/Font_90" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>

    <include
        android:id="@+id/unsub_btn"
        layout="@layout/layout_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>