<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingActivity">

    <include
        android:id="@+id/header"
        layout="@layout/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/menu_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/header">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cert_vacuna_title"
            android:textColor="@color/regal_blue"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:orientation="vertical"
            android:padding="24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/info_name_string"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:textAppearance="@style/name"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:background="@color/G40" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingStart="0dp"
                    android:paddingEnd="8dp"
                    android:text="@string/menu_info_nid"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/info_nid_string"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:layout_marginStart="8dp"
                    android:layout_gravity="center"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:id="@+id/setting_logout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="4dp">

                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="24dp"
            android:paddingBottom="8dp"
            android:text="@string/menu_guide"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/pdf_preview"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="fitCenter"/>

        <Button
            android:id="@+id/btn_download_pdf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/regal_blue"
            android:text="@string/str_button_vacuna_download"
            android:layout_gravity="center"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/footer"
        android:layout_width="290dp"
        android:layout_height="32dp"
        android:layout_centerInParent="true"
        android:layout_marginBottom="32dp"
        android:src="@drawable/ico_main_footer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>