<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="#77777777">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingTop="32dp"
        android:paddingBottom="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:padding="24dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/dialog_authentication">

        <TextView
            android:id="@+id/tv_auth_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gaudi_auth_title"
            android:textAppearance="@style/por_favor_s"
            android:lineSpacingExtra="4sp"
            android:translationY="-1.76sp"
            android:gravity="center"
            android:layout_marginBottom="24dp"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="#F5F5F7"
            android:layout_marginBottom="24dp">

            <TextView
                android:id="@+id/tv_result_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:textColor="@color/black"
                tools:text="2FC"
                android:textSize="24sp"
                android:gravity="center"
                />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gaudi_auth_desc"
            android:textAppearance="@style/por_favor_s"
            android:lineSpacingExtra="4sp"
            android:translationY="-1.76sp"
            android:gravity="center"
            android:layout_marginBottom="24dp"
            />


        <TextView
            android:id="@+id/tv_timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:visibility="gone"
            android:lineSpacingExtra="4sp"
            android:textAppearance="@style/por_favor_s"
            android:textColor="#CFAC65"
            android:textSize="20sp"
            android:translationY="-1.76sp"
            tools:text="3:00" />

        <RelativeLayout
            android:id="@+id/layer_auth"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="#1C294E"
            android:layout_marginBottom="24dp">

            <View
                android:id="@+id/icon_refresh"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                android:visibility="gone"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/tv_auth"
                android:background="@drawable/icon_refresh" />

            <TextView
                android:id="@+id/tv_auth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/gaudi_auth"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:gravity=""
                />
        </RelativeLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>